--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="info">Three.js</div>
 
+    <script src="https://github.com/mrdoob/three.js/blob/master/examples/jsm/capabilities/WebGL.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://unpkg.com/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="./js/index.js"></script>
